# zexz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/shaders/: basic3d.fs  basic3d.vs  basic3d_fragment.fs  basic3d_fragment.vs  spherize.fs  spherize.vs
resources/shaders/Basic3D/: basic3d.fs  basic3d.vs  export.jsx  fs_basic3d.c  ie_basic3d.xml  vs_basic3d.c
resources/shaders/Compute/: compute.csh  gaussian.csh  template.vsh
resources/shaders/Convolution/: convolution.csh
resources/shaders/Flo/: flo.fsh
resources/shaders/Spherize/: fs_spherize.c  spherize.fs  spherize.vs  vs_spherize.c
resources/shaders/Template/: template.fs
resources/shaders/bloom/: bloom.vs  bufferA.fs  bufferB.fs  main.fs
src/: CMakeLists.txt
src/zexz/utils/: utils.cpp  utils.h
test/: CMakeLists.txt  test_animation.cpp  test_application.cpp  test_gflags_glog.cpp  test_glfw.cpp  test_glm.cpp  test_imgui.cpp  test_stb.cpp  test_zexz.cpp
work/: CMakeLists.txt  main.cpp
work/0.Template/: CMakeLists.txt  main.cpp
work/1.Basic3D/: CMakeLists.txt  main.cpp  main_fragment.cpp  main_vertex.cpp
work/2.Sphere/: CMakeLists.txt  main.cpp  main_application.cpp
work/3.bloom/: CMakeLists.txt  main_application.cpp
work/4.Compute/: CMakeLists.txt  main.cpp  main_class.cpp  main_gaussian.cpp
work/5.Convolution/: CMakeLists.txt  main.cpp
work/6.Flo/: CMakeLists.txt  main.cpp
work/include/middle/: animation.cpp  animation.h  application.cpp  application.h  buffer.h  camera.cpp  camera.h  camera_simple.cpp  camera_simple.h  compute.cpp  compute.h  program.cpp  program.h  readme.md  shader.cpp  shader.h  texture.cpp  texture.h  timer.cpp  timer.h  utils.cpp  utils.h
