add_executable(1.Basic3D 
  main.cpp
)
target_link_libraries(1.Basic3D
  gflags
  glad
  glfw
  glog
  imgui
  imgui_glfw_ogl
  middle
  stb
  zexz
)

add_executable(1.Basic3D_fragment
  main_fragment.cpp
)
target_link_libraries(1.Basic3D_fragment
  gflags
  glad
  glfw
  glog
  imgui
  imgui_glfw_ogl
  middle
  stb
  zexz
)

add_executable(1.Basic3D_vertex
  main_vertex.cpp
)
target_link_libraries(1.Basic3D_vertex
  gflags
  glad
  glfw
  glog
  imgui
  imgui_glfw_ogl
  middle
  stb
  zexz
)