add_executable(4.Compute
  main.cpp
)
target_link_libraries(4.Compute
  gflags
  glad
  glfw
  glog
  imgui
  imgui_glfw_ogl
  middle
  stb
  zexz
)

add_executable(4.Compute_class
  main_class.cpp
)
target_link_libraries(4.Compute_class
  gflags
  glad
  glfw
  glog
  imgui
  imgui_glfw_ogl
  middle
  stb
  zexz
)